add omg-js and testrunner git sha tag to docker
for easier tracking on what version of repo we are using.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,8 +22,16 @@ jobs:
       - run:
           name: publish to GCP container registry
           command: |
+            GIT_COMMIT_SHA=$(git rev-parse HEAD)
+
             echo $GCLOUD_SERVICE_KEY | gcloud auth activate-service-account --key-file=-
             gcloud -q auth configure-docker
+
             docker build -t testrunner .
-            docker tag testrunner gcr.io/omisego-development/omg-js-testrunner
+            docker tag testrunner gcr.io/omisego-development/omg-js-testrunner:testrunner-$GIT_COMMIT_SHA
             docker push gcr.io/omisego-development/omg-js-testrunner
+
+            # add tag for omg-js sha
+            gcloud container images add-tag \
+            gcr.io/omisego-development/omg-js-testrunner:testrunner-$GIT_COMMIT_SHA \
+            gcr.io/omisego-development/omg-js-testrunner:omg-js-$(cat ./OMG_JS_SHA)
